cluster/home/heimdall/heimdall_basicauth_middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: heimdall-dashboard-basicauth
  namespace: heimdall
spec:
  basicAuth:
    secret: heimdall-dashboard-auth
