cluster/home/heimdall/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall
  namespace: heimdall
  labels:
    app: heimdall
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heimdall
  template:
    metadata:
      labels:
        app: heimdall
    spec:
      volumes:
      - name: heimdall
        persistentVolumeClaim:
          claimName: heimdall-pvc
      containers:
      - image: linuxserver/heimdall@sha256:afe621940a1e1d3adfff566eec342076f8c21aa870e98b5c29ff587d2679cf96
        name: heimdall
        imagePullPolicy: Always
        ports:
         - containerPort: 80
           name: http
        volumeMounts:
         - mountPath: /config
           name: heimdall
           subPath: config
        resources:
          requests:
            memory: "50Mi"
            cpu: "15m"
          limits:
            memory: "100Mi"
            cpu: "100m"
