cluster/home/heimdall/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heimdall-web-svc
  namespace: heimdall
spec:
  selector:
    app: heimdall
  ports:
    - name: http
      targetPort: 80
      port: 80
