cluster/home/heimdall/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: heimdall
  namespace: heimdall
  annotations:
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`heimdall.local.cjsolsen.com`)
      kind: Rule
      services:
        - name: heimdall-web-svc
          port: 80
      middlewares:
        - name: default-headers
        - name: heimdall-dashboard-basicauth
  tls:
    secretName: heimdall-cjsolsen-com-tls
